# wordguessr

./: Cargo.toml  README.md
src/: main.rs
src/assets/: dictionary.json
src/controller/: game_controller.rs  input_controller.rs  mod.rs
src/model/: cell.rs  dialog.rs  game_state.rs  grid.rs  message.rs  mod.rs  row.rs
src/service/: dictionary.rs
src/view/: home.rs  layout.rs  mod.rs
src/view/components/: cell.rs  dialog.rs  game_state.rs  grid.rs  message.rs  mod.rs  row.rs
