[package]
name = "wordguessr"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["form"] }
color-eyre = "0.6.5"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
