[package]
name = "wordguessr"
description = "A word guessing game"
version = "1.0.0"
license = "MIT"
edition = "2024"
categories = [ "games" ]
repository = "https://github.com/LuMarans30/wordguessr"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["form"] }
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
maud = { version = "0.27.0", features = ["axum"] }
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
